Java + Spring Updates